计划3.0版本设计方案-HOPE3层记忆方案-Phase4